changes to run on mainenlab, add in roi details

--- a/templates/app.html
+++ b/templates/app.html
@@ -125,8 +125,12 @@
         </select>
     </div>
 
-</div>
+        <!-- ROI INFO -->
+    <div class="four columns">
+        <div id="roiDetails"></div>
+    </div>
 
+</div>
 
 
 
