move preprocess dropdown

--- a/static/styles.css
+++ b/static/styles.css
@@ -303,8 +303,16 @@ h4 {
     width: 25px;
 }
 
+/*************************************************************************************************/
+/*  Preprocessing dropdown                                                                       */
+/*************************************************************************************************/
 
-
+#preprocess-dropdown {
+    position: fixed;
+    top: 100px;
+    right: 100px;
+    z-index: 200;
+}
 
 
 /*************************************************************************************************/
