--- a/templates/app.html
+++ b/templates/app.html
@@ -42,6 +42,14 @@
 
 <div id="share"><a>share</a></div>
 
+<!-- PRE-PROCESSING SELECTOR -->
+<div class="row" id="preprocess-dropdown">
+        <!-- Select -->
+        <p><b>Select preprocessing</b></p>
+        <select size="1" id="preprocessSelector" class="u-full-width">
+        </select>
+</div>
+
 {% endblock %}
 
 
@@ -108,20 +116,11 @@
 
 
 <div class="row">
-
     <!-- ROI SELECTOR -->
     <div class="four columns">
         <!-- Select -->
         <p><b>Select ROI</b></p>
         <select size="1" id="roiSelector" class="u-full-width">
-        </select>
-    </div>
-
-    <!-- PRE-PROCESSING SELECTOR -->
-    <div class="four columns">
-        <!-- Select -->
-        <p><b>Select preprocessing</b></p>
-        <select size="1" id="preprocessSelector" class="u-full-width">
         </select>
     </div>
 
