--- a/templates/app.html
+++ b/templates/app.html
@@ -120,7 +120,7 @@
 <!-- SESSION OVERVIEW HEADER -->
 <div class="row">
     <div class="twelve columns">
-        <h2>Session overview</h2>
+        <h2><a name="session"></a>Session overview</h2>
     </div>
 </div>
 
@@ -276,7 +276,7 @@
 <!-- TRIAL -->
 <div class="row">
     <div class="twelve columns">
-        <h2>Single trial overview</h2>
+        <h2><a name="trial"></a>Single trial overview</h2>
     </div>
 </div>
 
@@ -342,6 +342,7 @@
 <!-- Placeholder for unity -->
 <div class="row">
     <div class="twelve columns">
+        <a name="trialviewer"></a>
         <canvas id="unity-canvas-trial"></canvas>
     </div>
 </div>
@@ -375,7 +376,7 @@
 <!-- CLUSTER HEADER -->
 <div class="row">
     <div class="twelve columns">
-        <h2>Single cluster overview</h2>
+        <h2><a name="cluster"></a>Single cluster overview</h2>
     </div>
 </div>
 
