--- a/static/styles.css
+++ b/static/styles.css
@@ -303,16 +303,36 @@ h4 {
     width: 25px;
 }
 
-/*************************************************************************************************/
-/*  Preprocessing dropdown                                                                       */
-/*************************************************************************************************/
 
-#preprocess-dropdown {
+/*************************************************************************************************/
+/*  Preprocessing dropdown and session details                                                   */
+/*************************************************************************************************/
+#session-details {
     position: fixed;
     top: 100px;
-    right: 100px;
+    right: 20px;
     z-index: 200;
+    width: 400px;
+    height: 600px;
 }
+
+#session-details th, td {
+    padding-bottom: 0px;
+    padding-top: 0px
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+}
+
+.dropdown {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 
 
 /*************************************************************************************************/
