move the PSTH above the behaviour plots

--- a/templates/app.html
+++ b/templates/app.html
@@ -155,24 +155,6 @@
 </div>
 
 
-
-<!--                                          FIGURE 2                                          -->
-<!-- BEHAVIOUR DATA PLOTS -->
-<div class="row">
-    <!-- Session overview plot -->
-    <div class="ten columns">
-        <figure>
-            <div class="imgWrapper"><img id="behaviourPlot"></div>
-            <img id="behaviourPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif" class="loading">
-            <details>
-                <summary id="behaviourPlotLegend">Please hover your mouse over a subplot panel of interest above to
-                    obtain its figure legend here.</summary>
-            </details>
-        </figure>
-    </div>
-</div>
-
-
 <!--                                          FIGURE 3                                          -->
 <!-- Trial event plot -->
 <div class="row">
@@ -181,8 +163,7 @@
             <div class="imgWrapper"><img id="trialRasterPlot"></div>
             <img id="trialRasterPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif" class="loading">
             <details>
-                <summary id="trialRasterPlotLegend">Please hover your mouse over a subplot panel of interest above to
-                    obtain its figure legend here.</summary>
+                <summary id="trialRasterPlotLegend">Trial Raster Plot.</summary>
             </details>
         </figure>
     </div>
@@ -196,15 +177,27 @@
             <div class="imgWrapper"><img id="trialPsthPlot"></div>
             <img id="trialPsthPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif" class="loading">
             <details>
-                <summary id="trialPsthPlotLegend">Please hover your mouse over a subplot panel of interest above to
-                    obtain its figure legend here.</summary>
+                <summary id="trialPsthPlotLegend">Trial PSTH plot</summary>
             </details>
         </figure>
     </div>
 </div>
 
 
-
+<!--                                          FIGURE 2                                          -->
+<!-- BEHAVIOUR DATA PLOTS -->
+<div class="row">
+    <!-- Session overview plot -->
+    <div class="ten columns">
+        <figure>
+            <div class="imgWrapper"><img id="behaviourPlot"></div>
+            <img id="behaviourPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif" class="loading">
+            <details>
+                <summary id="behaviourPlotLegend">Behaviour Plot.</summary>
+            </details>
+        </figure>
+    </div>
+</div>
 
 
 <!------------------------------------------------------------------------------------------------>
