Change default eid

--- a/templates/app.html
+++ b/templates/app.html
@@ -147,8 +147,7 @@
             <div class="imgWrapper"><img id="sessionPlot"></div>
             <img id="sessionPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif" class="loading">
             <details>
-                <summary id="sessionPlotLegend">Please hover your mouse over a subplot panel of interest above to obtain
-                    its figure legend here.</summary>
+                <summary id="sessionPlotLegend">Raw data and session overview plot.</summary>
             </details>
         </figure>
     </div>
