Default spikesorting in 'explore' button

--- a/templates/macros.html
+++ b/templates/macros.html
@@ -4,7 +4,7 @@
 <!-- BUTTON EXPLORE -->
 <div class="row">
     <div class="twelve columns">
-        <a class="button button-primary button-explore" href="/app">explore the data</a>
+        <a class="button button-primary button-explore" href="/app?spikesorting=ss_2024-05-06">explore the data</a>
     </div>
 </div>
 {%- endmacro %}
