--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
             sensors.
         </p>
         <p>
-            For a comprehensive view, please <a href="/app">explore the data</a>, or read the article detailing the task
+            For a comprehensive view, please <a href="/app?spikesorting=ss_2024-05-06">explore the data</a>, or read the article detailing the task
             and the article
             detailing our standardized recording methods.
         </p>
