--- a/templates/template.html
+++ b/templates/template.html
@@ -91,7 +91,7 @@
                     <!-- MENU -->
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/app" class="menu-explore">Explore</a></li>
+                        <li><a href="/app?spikesorting=ss_2024-05-06" class="menu-explore">Explore</a></li>
                         <li><a href="https://doi.org/10.6084/m9.figshare.21400815">Paper</a></li>
                         <li><a
                                 href="https://int-brain-lab.github.io/iblenv/notebooks_external/data_release_brainwidemap.html">Download</a>
