Tooltip on spike sorting selection tabs

--- a/templates/app.html
+++ b/templates/app.html
@@ -91,13 +91,13 @@
 
             <div id="ss-container">
                 <input id="ss-1" type="radio" name="ss-group" checked="checked" />
-                <label for="ss-1">Original</label>
+                <label id="ss-1-label" for="ss-1" title="Original dataset">Original</label>
 
                 <input id="ss-2" type="radio" name="ss-group" />
-                <label for="ss-2">2024-03-22</label>
+                <label id="ss-2-label" for="ss-2" title="Repeated sites only">2024-03-22</label>
 
                 <input id="ss-3" type="radio" name="ss-group" />
-                <label for="ss-3">2024-05-06</label>
+                <label id="ss-3-label" for="ss-3" title="Default dataset">2024-05-06</label>
             </div>
     </div>
 </div>
